Updated the best seller and recommended logic
